LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_add3.geom
geometrics: main

/* Should fail -> mismatched input '*' expecting 'to' */
add 5*10 x 